--- a/index.css
+++ b/index.css
@@ -63,9 +63,16 @@ body{
     background-color: purple;
     border-radius: 20px;
     margin-top: 2px;
+    z-index: 100;
     
 }
 .ring-container{
     position: absolute;
     bottom: 5px;
+    border: 1px solid aqua;
+    display: flex;
+    flex-direction: column;
+    width: 200px;
+    height: 100%;
+    justify-content: flex-end;
 }
