--- a/index.css
+++ b/index.css
@@ -63,7 +63,6 @@ body{
     background-color: purple;
     border-radius: 20px;
     margin-top: 2px;
-    z-index: 100;
     
 }
 .ring-container{
@@ -72,6 +71,7 @@ body{
     border: 1px solid aqua;
     display: flex;
     flex-direction: column;
+    align-items: center;
     width: 200px;
     height: 100%;
     justify-content: flex-end;
