--- a/index.css
+++ b/index.css
@@ -1,6 +1,8 @@
 body{
-    margin: 0 auto;   
-    
+    margin: 0 auto;
+    /* display: flex;
+    flex-direction: column; 
+     align-items: center; */
 }
 
 .header{
