--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ body{
     font-family: 'Indie Flower', cursive;
     font-size: 60px; 
     font-weight: 600;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
 }
 .header{
     display: flex;
@@ -16,8 +16,20 @@ body{
     /* border: dashed 2px red; */
     justify-content: center;
     align-items: center;
-    column-gap: 5px;
+    /* column-gap: 5px; */
     /* width: 100%; */
+    margin-bottom: 20px;
+}
+.header-basic{
+    display: flex;
+    /* background-color: aqua; */
+    align-items: center;
+}
+.header-AI-Mode{
+    display: flex;
+    /* background-color: green; */
+    align-items: center;
+    justify-content: center;
 }
 /*  */
 .fontStyleHeader{
@@ -38,12 +50,12 @@ label{
     accent-color: #1d2b3b;
 }
 /*  */
-.header div:nth-child(2){
+/* .header div:nth-child(2){
     padding: 5px 10px;
     font-size: 20px;
     background-color: #d8e9ff;
     border-radius: 5px;
-}
+} */
 #hint-btn{
     margin-right: 30px;
 }
@@ -71,6 +83,7 @@ label{
     border: solid 2px black;
     cursor: pointer;
     height: 20px;
+    margin-left: 10px;
 }
 .btn-i:hover{
     background-color: #1d2b3b;
@@ -112,7 +125,7 @@ label{
 .vertical{
     background-color: #dd4433;
     width: 5px;
-    height: 300px;
+    height: 250px;
     /* display: flex; */
 }
 .horizontal{
@@ -138,7 +151,7 @@ label{
     flex-direction: column;
     align-items: center;
     width: 350px;
-    height: 300px;
+    height: 280px;
     justify-content: flex-end;
 }
 /* *****************  */
@@ -151,11 +164,12 @@ label{
 .stBox p{
     width: 80px;
     height: 30px;
+    margin: 0;
     display: none;
 }
 .work-status{
-    margin-top: 30px;
-    margin-bottom: 20px;
+    /* margin-top: 30px; */
+    /* margin-bottom: 20px; */
     font-family: 'Alkatra', cursive;
     font-size: 30px;
     display: flex;
@@ -179,7 +193,7 @@ label{
 /* Slider */
 
 .slidecontainer {
-    width: 12%; /* Width of the outside container */
+    width: 150px; /* Width of the outside container */
     display: flex;
     align-items: center;
     margin-right: 20px;
@@ -225,8 +239,12 @@ label{
 }
 
 .min-mov{
-    margin-top: 40px;
+    margin-top: 15px;
     font-size: 30px;
     font-family: 'Alkatra', cursive;
 
+}
+.header-AI-Mode p{
+    /* padding: 0; */
+    margin: 0;
 }
